--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
             <hr align="center" width="100%" color="#fff" style="margin: 0px; border-width: 0px; height: 3px;"/>
             <div id="buttons" style="padding: 8px;">
             </div>
-            <!-- <hr align="center" width="100%" color="#fff" style="margin: 0px; border-width: 0px; height: 3px;"/>
-            <div id="other">
-                <button onclick="" style="margin: 6px; width: 25%; height: 70px; padding: 6px; color: whitesmoke; background-color: #000; font-size: large;">History</button>
+            <hr align="center" width="100%" color="#fff" style="margin: 0px; border-width: 0px; height: 3px;"/>
+            <!-- <div id="other" style="padding: 8px;">
             </div> -->
         </center>
     </body>
